Handle Safari iOS toolbar viewport height issue
Safari on iOS shows a toolbar that gets minified under certain
conditions. If we want the app the fill the screen without overflowing
we can use dynamic viewport height (dvh) instead. This is not supported
by older browser so we check if it is before trying to use it.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,3 +17,13 @@ main {
   justify-content: space-between;
   align-items: center;
 }
+
+@supports (height: 100dvh) {
+  #app {
+    min-height: 100dvh;
+  }
+
+  main {
+    min-height: calc(100dvh - 4rem);
+  }
+}
